Tests/Runtime2/Error/Props/InspectError.goal
InspectError
- set %errorMessage% = %!error.Message%
- set %errorKey% = %!error.Key%
- set %errorStatusCode% = %!error.StatusCode%
